--- a/src/app/pdf-viewer/pdf-viewer.component.html
+++ b/src/app/pdf-viewer/pdf-viewer.component.html
@@ -1,3 +1,3 @@
 <div class="pdf-viewer">
-  <div id="nutrient-container" style="width: 100%; height: 100%;"></div>
+  <div id="nutrient-container" style="width: 100%; height: 100vh"></div>
 </div>
