--- a/src/app/components/dashboard/document-filters/document-filters.component.scss
+++ b/src/app/components/dashboard/document-filters/document-filters.component.scss
@@ -12,4 +12,13 @@ mat-form-field {
 
 .action-button {
   margin-left: auto;
+  
+  button {
+    transition: all 0.3s ease;
+    
+    &[disabled] {
+      opacity: 0.7;
+      cursor: not-allowed;
+    }
+  }
 } 
