--- a/src/app/components/dialogs/edit-document-dialog/edit-document-dialog.component.html
+++ b/src/app/components/dialogs/edit-document-dialog/edit-document-dialog.component.html
@@ -5,9 +5,11 @@
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Document Name</mat-label>
       <input matInput formControlName="name" required>
-      <mat-error *ngIf="form.get('name')?.hasError('required')">
-        Document name is required
-      </mat-error>
+      @if (form.get('name')?.hasError('required')) {
+        <mat-error>
+          Document name is required
+        </mat-error>
+      }
     </mat-form-field>
     
     <div class="document-info">
