--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,27 +11,34 @@
           <mat-label>Username</mat-label>
           <mat-icon matPrefix class="input-icon">person</mat-icon>
           <input matInput formControlName="username" type="text" required>
-          <mat-error *ngIf="loginForm.get('username')?.hasError('required')">
-            Username is required
-          </mat-error>
+          @if (loginForm.get('username')?.hasError('required')) {
+            <mat-error>
+              Username is required
+            </mat-error>
+          }
         </mat-form-field>
         
         <mat-form-field appearance="outline" class="full-width">
           <mat-label>Password</mat-label>
           <mat-icon matPrefix class="input-icon">lock</mat-icon>
           <input matInput formControlName="password" type="password" required>
-          <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
-            Password is required
-          </mat-error>
+          @if (loginForm.get('password')?.hasError('required')) {
+            <mat-error>
+              Password is required
+            </mat-error>
+          }
         </mat-form-field>
         
         <div class="form-actions">
           <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid || loading">
-            <mat-spinner diameter="20" *ngIf="loading"></mat-spinner>
-            <span *ngIf="!loading">
-              <mat-icon>login</mat-icon>
-              Sign In
-            </span>
+            @if (loading) {
+              <mat-spinner diameter="20"></mat-spinner>
+            } @else {
+              <span>
+                <mat-icon>login</mat-icon>
+                Sign In
+              </span>
+            }
           </button>
         </div>
       </form>
