--- a/src/app/components/dashboard/document-table/document-table.component.html
+++ b/src/app/components/dashboard/document-table/document-table.component.html
@@ -27,7 +27,7 @@
           (matSortChange)="handleSort($event)">
         
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>File</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>File</th>
           <td mat-cell *matCellDef="let document">
             <div class="file-name-container">
               <mat-icon class="file-icon">insert_drive_file</mat-icon>
@@ -37,7 +37,7 @@
         </ng-container>
 
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
           <td mat-cell *matCellDef="let document">
             <span class="status-chip" 
               [ngClass]="{
@@ -54,7 +54,7 @@
         </ng-container>
 
         <ng-container matColumnDef="createdBy">
-          <th mat-header-cell *matHeaderCellDef>Creator</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Creator</th>
           <td mat-cell *matCellDef="let document">
             <div class="creator-container">
               <mat-icon class="creator-icon">person</mat-icon>
@@ -64,7 +64,7 @@
         </ng-container>
 
         <ng-container matColumnDef="updatedAt">
-          <th mat-header-cell *matHeaderCellDef>Updated At</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Updated At</th>
           <td mat-cell *matCellDef="let document">
             <div class="date-container">
               <mat-icon class="date-icon">update</mat-icon>
